# crappy-home-automation

./: Cargo.toml
src/: http.rs  main.rs  tcp.rs  udp.rs
