[package]
name = "crappy-home-automation"
version = "0.1.0"
authors = ["Sébastien Volle <sebastien.volle@qapa.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hyper = "0.12"
rand = "0.7"

[profile.release]
lto = true
incremental = false # Incremental compilation doesnt work with LTO
panic = 'abort' # Disable unwind
opt-level = "z" # Optimize for size, you might want to remove this if performance is key
